# TableSage

./: README.md  pyproject.toml  requirements.txt
tablesage/: __init__.py  base_task.py  column_annotator.py  column_summarizer.py  insights_extractor.py  properties_comparer.py  properties_fuser.py  properties_merger.py  semantic_types.json  semantic_types.py  spatial_extractor.py  table_annotator.py  table_summarizer.py  table_task.py  tablesage.py  temporal_extractor.py  text_task.py
