[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tablesage"
version = "0.0.1"
description = "A profiling tool for tabular data leveraging the powerful capabilities of LLMs, appropriate for data scientists."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Alexandros Zeakis", email = "azeakis@athenarc.gr" }
]
dependencies = []
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/stelar-eu/TableSage"

[tool.setuptools.packages.find]
include = ["tablesage*"]  # Adjust if your package has a different name